--- a/splitwise-clone/package.json
+++ b/splitwise-clone/package.json
@@ -10,13 +10,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
+    "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.9",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-linear-gradient": "^2.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
