--- a/splitwise-clone/package.json
+++ b/splitwise-clone/package.json
@@ -10,10 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/stack": "^7.0.5",
+    "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "expo": "~52.0.9",
     "expo-status-bar": "~2.0.0",
